# fasttext-test

./: README.md  pyproject.toml
fast_text_test/: main.py
